traffic-route/destination-rule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: headers
spec: 
  host: headers
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
