traffic-route/virtual-service-subset-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: headers-vs
spec:
  hosts:
  - "*"
  gateways:
  - headers-gateway
  http:
    - match:
      - uri:
          prefix: /headers
      route:
        - destination:
            host: headers
            subset: v1
